apps/jellyfin/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    beaver-cloud.xyz/nas-media: 'true'
    app.kubernetes.io/component: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      runtimeClassName: nvidia
      securityContext:
        fsGroup: 1000
      nodeSelector:
        nvidia.com/gpu.product: Quadro-P620-SHARED
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest@sha256:1694ff069f0c9dafb283c36765175606866769f5d72f2ed56b6a0f1be922fc37
          resources:
            requests:
              memory: 1G
            limits:
              nvidia.com/gpu: '1'
              memory: 4G
          securityContext:
            privileged: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - name: http
              containerPort: 8096
