apps/jellyfin/resources/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: jellyfin
  ports:
    - name: http
      port: 80
      targetPort: 8096
